--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,8 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<label>
-		Open your eyes:
-		<input type="text" placeholder="👀" />
-	</label>
+	<form action="/" class="search-form">
+		<label>
+			Search type:
+			<select class="entity-input">
+				<option value="users">Users</option>
+				<option value="posts">Posts</option>
+			</select>
+		</label>
+
+		<label>
+			Search term:
+			<input class="entity-input" type="text" placeholder="Username" name="search_term" value="{{ search_term }}" />
+		</label>
+		<button type="submit">Open your eyes</button>
+	</form>
+
+	{% if results_html %}
+		<section>
+			{{ results_html | safe }}
+		</section>
+	{% endif %}
 {% endblock %}
