--- a/src/views/users_results.jinja
+++ b/src/views/users_results.jinja
@@ -4,3 +4,8 @@
 		<li><strong>Username:</strong> {{ user.username }}</li>
 	</ul>
 {% endfor %}
+{% if not users %}
+	<div class="no-results">
+		No results found for this query
+	</div>
+{% endif %}
