--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,7 +12,7 @@
 
         <label>
             Search term:
-            <input class="entity-input" type="text" placeholder="Username" name="search_term" value="{{ search_term }}" />
+            <input class="entity-input" type="text" placeholder="Search term" name="search_term" value="{{ search_term }}" />
         </label>
 
         {% if page_count %}
