Add rudimentary users search (#4)
* Add rudimentary users search

* Use Python3.9 for CI

* Add pagination

* Handle bad regexes

* Remove unused file

* Rename file and use spaces

* Log error if query fails

* Search anywhere in the string, not just the start

* Handle empty search terms gracefully

* Use a generic placeholder

* Simplify the template structure

* Simplify exception logging

Co-authored-by: Madison Swain-Bowden <bowdenm@spu.edu>

Co-authored-by: Madison Swain-Bowden <bowdenm@spu.edu>

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<label>
-		Open your eyes:
-		<input type="text" placeholder="👀" />
-	</label>
+    {% include "search_form.html" %}
 {% endblock %}
