--- a/src/views/post.html
+++ b/src/views/post.html
@@ -4,10 +4,8 @@
         <li><strong>Content:</strong> {{ post.text }}</li>
     {% endif %}
     {% if post.echo %}
-        {% with post = post.echo %}
-            {% with wrapper_class = "echo-container" %}
-                <li><strong>Echo:</strong> {% include "post.html" %}</li>
-            {% endwith %}
+        {% with post=post.echo wrapper_class="echo-container" %}
+            <li><strong>Echo:</strong> {% include "post.html" %}</li>
         {% endwith %}
     {% endif %}
     {% if post.comments %}
