--- a/src/views/search_form.html
+++ b/src/views/search_form.html
@@ -1,4 +1,14 @@
-<form action="/" class="search-form">
+<script>
+function resetPageNumber() {
+    let searchType, searchTerm;
+    [, searchType, searchTerm] = window.location.pathname.split("/")
+    const form = document.getElementById("search-form")
+    if (form.search_type.value !== searchType || form.search_term.value !== searchTerm) {
+        form.page.value = 0;
+    }
+}
+</script>
+<form action="/" class="search-form" id="search-form" onsubmit="resetPageNumber();">
     <label>
         Search type:
         <select class="entity-input" name="search_type">
