Prevent form fields from remaining unchanged by BFCache

--- a/src/views/search_form.html
+++ b/src/views/search_form.html
@@ -8,7 +8,7 @@ function resetPageNumber() {
     }
 }
 </script>
-<form action="/" class="search-form" id="search-form" onsubmit="resetPageNumber();">
+<form action="/" class="search-form" id="search-form" onsubmit="resetPageNumber();" autocomplete="off">
     <label>
         Search type:
         <select class="entity-input" name="search_type">
