--- a/src/views/posts.html
+++ b/src/views/posts.html
@@ -1,15 +1,37 @@
 {% extends "base.html" %}
 
-{% block content %}
-    {% include "search_form.html" %}
+{% block form_fields %}
+    <label>
+        User fields:
+        <input
+            class="entity-input"
+            type="text"
+            placeholder="Search post username fields"
+            name="search_term"
+            value="{{ search_term }}"
+        />
+    </label>
 
+    <label>
+        Content fields:
+        <input
+            class="entity-input"
+            type="text"
+            placeholder="Search post and comment content"
+            name="search_content"
+            value="{{ search_content }}"
+        />
+    </label>
+{% endblock %}
+
+{% block content %}
     <section>
         {% for post in posts %}
             {% with wrapper_class = "post-container" %}
                 {% include "post.html" %}
             {% endwith %}
         {% endfor %}
-        {% if not posts %}
+        {% if posts == [] %}
             <div class="no-results">
                 No results found for this query
             </div>
