--- a/src/views/users.html
+++ b/src/views/users.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 
-{% block content %}
-    {% include "search_form.html" %}
+{% block form_fields %}
+    <label>
+        Search term:
+        <input class="entity-input" type="text" placeholder="Search term" name="search_term" value="{{ search_term }}" />
+    </label>
+{% endblock %}
 
+{% block content %}
     <section>
         {% for user in users %}
             <ul>
@@ -10,7 +15,7 @@
                 <li><strong>Username:</strong> {{ user.username }}</li>
             </ul>
         {% endfor %}
-        {% if not users %}
+        {% if users == [] %}
             <div class="no-results">
                 No results found for this query
             </div>
