--- a/src/public/style.css
+++ b/src/public/style.css
@@ -74,3 +74,40 @@ button:active {
   width: 30em;
   padding: 1em 2em;
 }
+
+.link-container {
+  display: flex;
+}
+
+.link-container a {
+  color: black;
+  text-decoration: none;
+  padding: 1em;
+  font-size: 16px;
+  border-radius: 3px;
+  background-color: lightgrey;
+  border: 1px solid grey;
+  box-shadow: 2px 2px teal;
+  cursor: pointer;
+  margin-bottom: 2em;
+}
+
+.link-container a:hover {
+  background-color: yellow;
+}
+
+.link-container a:active {
+  box-shadow: none;
+}
+
+.link-container a:visited {
+  color: black;
+}
+
+.link-container a:last-child {
+  margin-left: 1em;
+}
+
+.form-header {
+  margin-top: 0;
+}
