Shorten the placeholders

--- a/src/views/posts.html
+++ b/src/views/posts.html
@@ -10,7 +10,7 @@
         <input
             class="entity-input"
             type="text"
-            placeholder="Search post username fields"
+            placeholder="User fields"
             name="search_term"
             value="{{ search_term }}"
         />
@@ -21,7 +21,7 @@
         <input
             class="entity-input"
             type="text"
-            placeholder="Search post and comment content"
+            placeholder="Content fields"
             name="search_content"
             value="{{ search_content }}"
         />
