--- a/src/views/posts.html
+++ b/src/views/posts.html
@@ -11,8 +11,8 @@
             class="entity-input"
             type="text"
             placeholder="User fields"
-            name="search_term"
-            value="{{ search_term }}"
+            name="username"
+            value="{{ username }}"
         />
     </label>
 
