--- a/src/views/users.html
+++ b/src/views/users.html
@@ -7,7 +7,7 @@
 
     <label>
         Search term:
-        <input class="entity-input" type="text" placeholder="Search term" name="search_term" value="{{ search_term }}" />
+        <input class="entity-input" type="text" placeholder="Search term" name="username" value="{{ username }}" />
     </label>
 {% endblock %}
 
