Use `type="search"` for text inputs

--- a/src/views/posts.html
+++ b/src/views/posts.html
@@ -9,7 +9,7 @@
         User fields:
         <input
             class="entity-input"
-            type="text"
+            type="search"
             placeholder="User fields"
             name="username"
             value="{{ username }}"
@@ -20,7 +20,7 @@
         Content fields:
         <input
             class="entity-input"
-            type="text"
+            type="search"
             placeholder="Content fields"
             name="search_content"
             value="{{ search_content }}"
