--- a/src/views/users.html
+++ b/src/views/users.html
@@ -7,7 +7,13 @@
 
     <label>
         Search term:
-        <input class="entity-input" type="text" placeholder="Search term" name="username" value="{{ username }}" />
+        <input
+            class="entity-input"
+            type="search"
+            placeholder="Search term"
+            name="username"
+            value="{{ username }}"
+        />
     </label>
 {% endblock %}
 
