Add searching post content fields (#11)
* Separate forms and search post content

* Remove unused template

* Move search type into links at top of page

* Shorten the placeholders

* Prevent accidental get-all search

* Remove tabs

* Rename search_term to username

* Use `type="search"` for text inputs

* Use urlencode to build query string

* Exact match usernames and combine with content query

--- a/src/views/base.html
+++ b/src/views/base.html
@@ -10,19 +10,24 @@
     <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
-<header>
-    <h1>
-        Parler Data Searcher
-    </h1>
-</header>
+    <header>
+        <h1>
+            Parler Data Searcher
+        </h1>
+    </header>
 
-{% block content %}{% endblock %}
+    <div class="link-container">
+        <a href="/users">Search users</a>
+        <a href="/posts">Search posts</a>
+    </div>
 
-<hr />
+    {% block content %}{% endblock %}
 
-<footer>
-    <a href="http://twitter.com/TechBlocSEA">If I break message TechBloc</a>
-</footer>
+    <hr />
+
+    <footer>
+        <a href="http://twitter.com/TechBlocSEA">If I break message TechBloc</a>
+    </footer>
 
 </body>
 </html>
