--- a/src/views/posts.html
+++ b/src/views/posts.html
@@ -6,22 +6,22 @@
     <input type="hidden" value="posts" name="search_type" />
 
     <label>
-        User fields:
+        Username (exact, case-sensitive):
         <input
             class="entity-input"
             type="search"
-            placeholder="User fields"
+            placeholder="username"
             name="username"
             value="{{ username }}"
         />
     </label>
 
     <label>
-        Content fields:
+        Content:
         <input
             class="entity-input"
             type="search"
-            placeholder="Content fields"
+            placeholder="content"
             name="search_content"
             value="{{ search_content }}"
         />
