--- a/src/public/style.css
+++ b/src/public/style.css
@@ -19,7 +19,7 @@ footer {
 .search-form {
   display: flex;
   flex-direction: column;
-  max-width: fit-content;
+  max-width: 550px;
   padding: 2em;
   background-color: cyan;
   font-weight: 600;
