display images portportional to width of container; allow lines of text to be a bit longer

--- a/src/views/media.html
+++ b/src/views/media.html
@@ -1,7 +1,7 @@
-<ul>
+<ul class="{{ wrapper_class }}">
    <li><strong>Link:</strong> <a href="{{ media.link }}" target="_blank" rel="noopener noreferrer">{{ media.title if media.title else media.link }}</a></li>
    {% if media.image %}
-      <li><img src="{{ media.image }}" width="200" height="200" /></li>
+      <li><img src="{{ media.image }}" /></li>
    {% endif %}
    {% if media.excerpt %}
       <li><strong>Excerpt:</strong> {{ media.excerpt }}</li>
