--- a/src/public/style.css
+++ b/src/public/style.css
@@ -64,15 +64,24 @@ button:active {
 
 .no-results {
   font-weight: 600;
-  margin: 2em;
+  margin: 1em;
 }
 
 .post-container {
   margin-bottom: 2em;
   border: 1px solid black;
   border-radius: 3px;
-  width: 30em;
+  max-width: 50em;
   padding: 1em 2em;
+}
+
+.post-container li {
+    margin: 0.5em;
+}
+
+.post-media-container img {
+    width: 100%;
+    height: 100%;
 }
 
 .link-container {
