--- a/src/views/users.html
+++ b/src/views/users.html
@@ -21,8 +21,8 @@
     <section>
         {% for user in users %}
             <ul>
-                <li><strong>Name:</strong> {{ user.name }}</li>
-                <li><strong>Username:</strong> {{ user.username }}</li>
+                <li><strong>Name:</strong> {{ user.name }} </li>
+                <li><strong>Username:</strong> <a href="{{ url_for('posts', username=user.username) }}">{{ user.username }}</a></li>
             </ul>
         {% endfor %}
         {% if users == [] %}
