--- a/src/views/comments.html
+++ b/src/views/comments.html
@@ -1,6 +1,6 @@
 {% for comment in comments %}
     <ul>
-        <li><strong>Username:</strong> {{ comment.username }}</li>
+        <li><strong>Username:</strong> <a href="{{ url_for('posts', username=comment.username) }}">{{ comment.username }}</a> </li>
         <li><strong>Content:</strong> {{ comment.text }}</li>
     </ul>
 {% endfor %}
