--- a/src/views/comments.html
+++ b/src/views/comments.html
@@ -1,6 +1,6 @@
 {% for comment in comments %}
     <ul>
-        <li><strong>Username:</strong> {{ comment.username }}</li>
-        <li><strong>Content:</strong> {{ comment.text }}</li>
+        <li><strong>Username:</strong> {{ comment.username | with_search_links }}</li>
+        <li><strong>Content:</strong> {{ comment.text | with_search_links }}</li>
     </ul>
 {% endfor %}
