--- a/src/views/post.html
+++ b/src/views/post.html
@@ -1,7 +1,7 @@
 <ul class="{{ wrapper_class }}">
-    <li><strong>Username:</strong> {{ post.username }}</li>
+    <li><strong>Username:</strong> {{ post.username | with_search_links }}</li>
     {% if post.text %}
-        <li><strong>Content:</strong> {{ post.text }}</li>
+        <li><strong>Content:</strong> {{ post.text | with_search_links }}</li>
     {% endif %}
     {% if post.echo %}
         {% with post=post.echo, wrapper_class="echo-container" %}
