--- a/src/views/base.html
+++ b/src/views/base.html
@@ -26,7 +26,13 @@
     <hr />
 
     <footer>
-        <a href="http://twitter.com/TechBlocSEA">If I break message TechBloc</a>
+        <p>
+            <a href="http://twitter.com/TechBlocSEA" target="_blank" rel="noopener noreferrer">If I break message TechBloc</a>
+        </p>
+
+        <p>
+            <a href="{{ url_for('about') }}">About this website</a>
+        </p>
     </footer>
 
 </body>
