--- a/src/views/about.html
+++ b/src/views/about.html
@@ -29,6 +29,6 @@
 
 <h2>Disclaimer</h2>
 <p>
-	Please beware before using this website that users on Parler post extremely vile shit. Tech Bloc is not responsible for this data or how you use it or its contents. Please be careful when searching this information and respect your own limits.
+	Please beware before using this website that the posts that users on Parler make are extremely vile. Tech Bloc is not responsible for this data or how you use it or its contents. Please be careful when searching this information and respect your own limits.
 </p>
 {% endblock %}
