--- a/src/views/about.html
+++ b/src/views/about.html
@@ -24,7 +24,7 @@
 </p>
 
 <p>
-	<strong>Additional note:</strong> Currently any links to the Parler API are dead. We're not sure what's going on there but we're monitoring the situation and if we can restore those links we will. Otherwise just know that they're broken.
+	<strong>Additional note:</strong> Currently any links to the Parler API (e.g. Parler-hosted images & videos) are dead. We're not sure what's going on there but we're monitoring the situation and if we can restore those links we will. Otherwise just know that they're broken.
 </p>
 
 <h2>Disclaimer</h2>
