Highlight matched terms (#32)
* Highlight matched terms

* Handle None content_regex

* Try to simplify

* Return strings from function and safe escape in templates

* Add unit test

Co-authored-by: Madison Swain-Bowden <bowdenm@spu.edu>

--- a/src/views/post.html
+++ b/src/views/post.html
@@ -1,7 +1,7 @@
 <ul class="{{ wrapper_class }}">
-    <li><strong>Username:</strong> {{ post.username | with_search_links }}</li>
+    <li><strong>Username:</strong> {{ post.username | with_search_links | safe }}</li>
     {% if post.text %}
-        <li><strong>Content:</strong> {{ post.text | with_search_links }}</li>
+        <li><strong>Content:</strong> {{ post.text | with_search_links | with_highlighted_term(content_regex) | safe }}</li>
     {% endif %}
     {% if post.echo %}
         {% with post=post.echo, wrapper_class="echo-container" %}
