Credit donk_enby

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>About the data</h2>
 <p>
-	This tool lets users search the Parler text post data that was scraped and published by <a href="https://ddosecrets.com/wiki/Parler#Text_posts" target="_blank" rel="noopener noreferrer">Distributed Denial of Secrets</a>. This dataset includes about 1.6 million posts made on Parler around the time of J6.
+	This tool lets users search the Parler text post data that was scraped and published by <a href="https://ddosecrets.com/wiki/Parler#Text_posts" target="_blank" rel="noopener noreferrer">Distributed Denial of Secrets (via donk_enby)</a>. This dataset includes about 1.6 million posts made on Parler around the time of J6.
 </p>
 
 <h2>How to use this website</h2>
