Make about the homepage and the disclaimer more prominant

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -113,7 +113,7 @@ button:active {
   color: black;
 }
 
-.link-container a:last-child {
+.link-container a:not(:first-child) {
   margin-left: 1em;
 }
 
